<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>dawdler-boot-train</groupId>
    <artifactId>dawdler-boot-train</artifactId>
    <version>0.21.1-jdk21-RELEASES</version>
  </parent>
  <artifactId>order-web-api</artifactId>
  	<dependencies>
		<dependency>
			<groupId>dawdler-boot</groupId>
			<artifactId>dawdler-boot-web-undertow</artifactId>
		</dependency>
		<dependency>
			<groupId>dawdler-boot</groupId>
			<artifactId>dawdler-boot-web-undertow-jsp</artifactId>
		</dependency>
		<dependency>
			<groupId>dawdler-boot-train</groupId>
			<artifactId>order-api</artifactId>
		</dependency>
		<!--<dependency>
			<groupId>dawdler</groupId>
			<artifactId>dawdler-client-plug-load</artifactId>
		</dependency>-->
		<dependency>
			<groupId>dawdler</groupId>
			<artifactId>dawdler-client-plug-session</artifactId>
		</dependency>
		<dependency>
			<groupId>dawdler</groupId>
			<artifactId>dawdler-client-plug-rabbitmq</artifactId>
		</dependency>
		<dependency>
			  <groupId>test_jar</groupId>
  <artifactId>test_jar</artifactId>
  <version>0.0.1-SNAPSHOT</version>
		</dependency>
		
	</dependencies>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>dawdler-boot</groupId>
				<artifactId>dawdler-boot-web-dependencies</artifactId>
				<version>0.21.1-jdk21-RELEASES</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<build>
		<plugins>
			<plugin>
				<groupId>dawdler-boot</groupId>
				<artifactId>dawdler-boot-maven-plugin</artifactId>
				<version>0.21.1-jdk21-RELEASES</version>
				<executions>
					<execution>
						<goals>
							<goal>repackage</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<encoding>${project.build.sourceEncoding}</encoding>
					<source>21</source>
					<target>21</target>
					<!--debug>true</debug>-->
					<compilerArgs>
						<arg>--add-exports</arg>
						<arg>java.base/jdk.internal.misc=dawdler.core</arg>
						<arg>--add-exports</arg>
						<arg>java.base/jdk.internal.loader=dawdler.util</arg>
						<arg>--add-exports</arg>
						<arg>java.base/jdk.internal.loader=order.web.api</arg>
						<arg>--add-exports</arg>
						<arg>java.base/jdk.internal.misc=order.web.api</arg>
						<arg>--add-exports</arg>
						<arg>java.base/jdk.internal.perf=order.web.api</arg>
					</compilerArgs>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>